# mcp-server

./: .gitignore  ARCHITECTURE.md  AWS_SETUP.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SETUP_COMPLETE.md  check_models.py  pyproject.toml  run_server.sh  setup_claude_agent.py  test_bedrock_model.py
.github/workflows/: ci.yml
examples/: README.md  check_models.py  test_bedrock_model.py  test_claude_models_mcp.py
src/mcp_server/: server.py
src/mcp_server/tools/: __init__.py  api_client.py  time_tools.py  weather_tools.py
src/mcp_server/tools/conversation/: __init__.py  conversation_tools.py
src/mcp_server/tools/time/: __init__.py
src/mcp_server/tools/weather/: __init__.py  weather_tools.py
src/mcp_weather_server/: __init__.py  api_client.py  server.py  tools.py
tests/: test_api_client.py  test_conversation_integration.py  test_conversation_tools.py  test_time_integration.py  test_time_tools.py  test_tools.py
web_app/: README.md  __init__.py  app.py
web_app/static/: index.html
